# auryn

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile.am  README  README.md  beskow_setup.txt  configure.ac  reconf.sh
aurynapps/sim_bcpnn/: Bcpnn.py  Makefile  sim_bcpnn_1.cpp
doc/: Doxyfile  README  mainpage.md
examples/: CMakeLists.txt  Makefile.am  py1.stim  sim_2comp_input.cpp  sim_2comp_neuron.cpp  sim_attractor.cpp  sim_background.cpp  sim_bcpnn_1.cpp  sim_bg_lowpass.cpp  sim_bg_scaling.cpp  sim_bg_scaling2.cpp  sim_bg_static.cpp  sim_brunel2k.cpp  sim_brunel2k_bcpnn.cpp  sim_brunel2k_pl.cpp  sim_coba_benchmark.cpp  sim_coba_binmon.cpp  sim_current_inject.cpp  sim_current_steps.cpp  sim_current_stim.cpp  sim_delay_connection.cpp  sim_dense.cpp  sim_epsp.cpp  sim_epsp_binmon.cpp  sim_epsp_stp.cpp  sim_file_current_inject.cpp  sim_inputchannels.cpp  sim_isp_big.cpp  sim_isp_orig.cpp  sim_minicols.cpp  sim_modularei.cpp  sim_nbg_neuron.cpp  sim_parrot.cpp  sim_poisson.cpp  sim_poisson_input.cpp  sim_srm0_steps.cpp  sim_stdp.cpp  sim_step_current.cpp  sim_stim_homtriplet.cpp  sim_stim_scaling.cpp  (+4 more)
examples/currents/: CMakeLists.txt  inject_current.txt  sim_current_inject.cpp  sim_current_steps.cpp  sim_current_stim.cpp  sim_file_current_inject.cpp
examples/misc/: sim_delay_connection.cpp  sim_epsp.cpp  sim_epsp_binmon.cpp  sim_epsp_stp.cpp  sim_parrot.cpp
examples/monitoring/: sim_multi_state_monitor.cpp
examples/plasticity/: sim_background.cpp  sim_bg_lowpass.cpp  sim_bg_scaling.cpp  sim_bg_scaling2.cpp  sim_bg_static.cpp  sim_isp_big.cpp  sim_isp_orig.cpp  sim_stdp.cpp  sim_stim_homtriplet.cpp  sim_stim_scaling.cpp
examples/poisson/: sim_poisson.cpp  sim_poisson_bump.cpp  sim_poisson_input.cpp
examples/tutorials/: CMakeLists.txt  sim_tutorial1.cpp  sim_tutorial2.cpp  sim_tutorial3.cpp
sim/: sim_background.cpp  sim_coba_benchmark.cpp  sim_dense.cpp  sim_epsp.cpp  sim_poisson.cpp
src/: ABSConnection.cpp  ABSConnection.h  AIF2Group.cpp  AIF2Group.h  AIFGroup.cpp  AIFGroup.h  AdExGroup.cpp  AdExGroup.h  AllToAllConnection.cpp  AllToAllConnection.h  AmpaMonitor.cpp  AmpaMonitor.h  AuditoryBeepGroup.cpp  AuditoryBeepGroup.h  AurynVector.cpp  AurynVector.h  AurynVersion.cpp  AurynVersion.h  BinarySpikeMonitor.cpp  BinarySpikeMonitor.h  BinaryStateMonitor.cpp  BinaryStateMonitor.h  CMakeLists.txt  Checker.cpp  Checker.h  ComplexMatrix.h  Connection.cpp  Connection.h  CorrelatedPoissonGroup.cpp  CorrelatedPoissonGroup.h  CubaIFGroup.cpp  CubaIFGroup.h  CurrentInjector.cpp  CurrentInjector.h  CurrentStimulator.cpp  CurrentStimulator.h  DelayedSpikeMonitor.cpp  DelayedSpikeMonitor.h  Device.cpp  Doxyfile  (+140 more)
src/auryn/: ABSConnection.cpp  ABSConnection.h  AIF2Group.cpp  AIF2Group.h  AIFGroup.cpp  AIFGroup.h  AdExGroup.cpp  AdExGroup.h  AdExGroupNB.cpp  AdExGroupNB.h  AllToAllConnection.cpp  AllToAllConnection.h  AuditoryBeepGroup.cpp  AuditoryBeepGroup.h  AurynDelayVector.cpp  AurynDelayVector.h  AurynVector.cpp  AurynVector.h  AurynVersion.cpp  AurynVersion.h  BcpnnConnection.cpp  BcpnnConnection.h  BinarySpikeMonitor.cpp  BinarySpikeMonitor.h  BinaryStateMonitor.cpp  BinaryStateMonitor.h  BurstRateMonitor.cpp  BurstRateMonitor.h  Checker.cpp  Checker.h  ComplexMatrix.cpp  ComplexMatrix.h  ConcatGroup.cpp  ConcatGroup.h  Connection.cpp  Connection.h  CorrelatedPoissonGroup.cpp  CorrelatedPoissonGroup.h  CubaIFGroup.cpp  CubaIFGroup.h  (+156 more)
test/: run_network_tests.sh  run_tests.sh  run_unit_tests.sh
test/coba_test/: coba_checksums.ref  pynn.ei.wmat  pynn.ii.wmat  run_coba_parallel_test.sh  run_coba_test.sh
test/src/: CMakeLists.txt  README.md  test_AurynDelayVector.cpp  test_AurynStateVector.cpp  test_AurynVector.cpp  test_ComplexMatrix.cpp  test_EulerTrace.cpp  test_LinearTrace.cpp  test_SimpleMatrix.cpp
tests/: coba_checksums.ref  run_coba_test.sh  run_tests.sh  run_unit_tests.sh
tests/coba_test/: coba_checksums.ref  pynn.ee.wmat  pynn.ie.wmat  run_coba_parallel_test.sh  run_coba_test.sh
tests/src/: CMakeLists.txt  test_AurynVector.cpp  test_ComplexMatrix.cpp  test_EulerTrace.cpp
tools/: CMakeLists.txt  abe.cpp  aube.cpp  aubs.cpp  pyaube.py
tools/experimental/: loadspk.py
tools/python/: README.md  auryn_binary_tools.py  linear_receptive_field.py  membrane_potential.py  merged_spike_raster.py  simple_spike_raster.py  simple_spike_stats.py  spkimport.py
tools/python/auryntools/: __init__.py  file_access.py  stats.py  utils.py
