lib_LTLIBRARIES = libauryn.la

libauryn_la_CPPFLAGS = $(MPI_CXXFLAGS) $(BOOST_CPPFLAGS) -ansi -pipe -O3 -march=native -ffast-math -pedantic
libauryn_la_LDFLAGS = -version-info 0:0:0
	LIBS = $(MPI_CXXLDFLAGS) $(BOOST_SERIALIZATION_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_MPI_LIBS)

libauryn_la_SOURCES = \
					  ABSConnection.cpp \
					  AIF2Group.cpp \
					  AIFGroup.cpp \
					  AmpaMonitor.cpp \
					  AuditoryBeepGroup.cpp \
					  auryn_definitions.cpp \
					  auryn_global.cpp \
					  Checker.cpp \
					  ComplexMatrix.cpp \
					  Connection.cpp \
					  CorrelatedPoissonGroup.cpp \
					  CubaIFGroup.cpp \
					  DelayedSpikeMonitor.cpp \
					  DuplexConnection.cpp \
					  EulerTrace.cpp \
					  FileInputGroup.cpp \
					  FileModulatedPoissonGroup.cpp \
					  GabaMonitor.cpp \
					  IafPscDeltaGroup.cpp \
					  IdentityConnection.cpp \
					  IF2Group.cpp \
					  IFGroup.cpp \
					  LinearTrace.cpp \
					  Logger.cpp \
					  Monitor.cpp \
					  NeuronGroup.cpp \
					  NmdaMonitor.cpp \
					  PatternMonitor.cpp \
					  PatternStimulator.cpp \
					  PoissonGroup.cpp \
					  PoissonStimulator.cpp \
					  PopulationRateMonitor.cpp \
					  ProfilePoissonGroup.cpp \
					  RateChecker.cpp \
					  RateModulatedConnection.cpp \
					  RateMonitor.cpp \
					  RealTimeMonitor.cpp \
					  SimpleMatrix.cpp \
					  SparseConnection.cpp \
					  SpikeDelay.cpp \
					  SpikeMonitor.cpp \
					  SpikingGroup.cpp \
					  StateMonitor.cpp \
					  STDPConnection.cpp \
					  STDPwdConnection.cpp \
					  StimulusGroup.cpp \
					  STPConnection.cpp \
					  StructuredPoissonGroup.cpp \
					  SymmetricSTDPConnection.cpp \
					  SyncBuffer.cpp \
					  System.cpp \
					  TIFGroup.cpp \
					  TripletConnection.cpp \
					  TripletDecayConnection.cpp \
					  VoltageMonitor.cpp \
					  WeightMatrixMonitor.cpp \
					  WeightMonitor.cpp \
					  WeightPatternMonitor.cpp \
					  WeightStatsMonitor.cpp \
					  WeightSumMonitor.cpp


include_HEADERS = \
				  ABSConnection.h \
				  AIF2Group.h \
				  AIFGroup.h \
				  AmpaMonitor.h \
				  AuditoryBeepGroup.h \
				  auryn_definitions.h \
				  auryn_global.h \
				  auryn.h \
				  Checker.h \
				  ComplexMatrix.h \
				  Connection.h \
				  CorrelatedPoissonGroup.h \
				  CubaIFGroup.h \
				  DelayedSpikeMonitor.h \
				  DuplexConnection.h \
				  EulerTrace.h \
				  FileInputGroup.h \
				  FileModulatedPoissonGroup.h \
				  GabaMonitor.h \
				  IafPscDeltaGroup.h \
				  IdentityConnection.h \
				  IF2Group.h \
				  IFGroup.h \
				  LinearTrace.h \
				  Logger.h \
				  Monitor.h \
				  NeuronGroup.h \
				  NmdaMonitor.h \
				  PatternMonitor.h \
				  PatternStimulator.h \
				  PoissonGroup.h \
				  PoissonStimulator.h \
				  PopulationRateMonitor.h \
				  ProfilePoissonGroup.h \
				  RateChecker.h \
				  RateModulatedConnection.h \
				  RateMonitor.h \
				  RealTimeMonitor.h \
				  SimpleMatrix.h \
				  SparseConnection.h \
				  SpikeDelay.h \
				  SpikeMonitor.h \
				  SpikingGroup.h \
				  StateMonitor.h \
				  STDPConnection.h \
				  STDPwdConnection.h \
				  StimulusGroup.h \
				  STPConnection.h \
				  StructuredPoissonGroup.h \
				  SymmetricSTDPConnection.h \
				  SyncBuffer.h \
				  System.h \
				  TIFGroup.h \
				  TripletConnection.h \
				  TripletDecayConnection.h \
				  VoltageMonitor.h \
				  WeightMatrixMonitor.h \
				  WeightMonitor.h \
				  WeightPatternMonitor.h \
				  WeightStatsMonitor.h \
				  WeightSumMonitor.h
